--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
 	<string name="reboot_soft">Soft reboot</string>
     <string name="reboot_recovery">Recovery</string>
     <string name="reboot_bootloader">Bootloader</string>
+    <string name="reboot_flash">Flashmode</string>
     <string name="reboot_system1">System1</string>
     <string name="reboot_system2">System2</string>
     <string name="reboot_system12">System1/2</string>
@@ -73,7 +74,6 @@
 	<string name="remove_airplane_summ">Remove the original airplane mode toggle item if it exists</string>
 	<string name="ath_fake_poweroff_title">Fake power off</string>
 	<string name="ath_fake_poweroff_summ">Replace ATH description with a fake power off button to deceive thieves</string>
-	
 	
 	<string name="sect_debug">App Options</string>
 	<string name="verbose_log_title">Verbose logging</string>
